--- a/RCB_Chat.html
+++ b/RCB_Chat.html
@@ -8,6 +8,7 @@
 		outline: 1px solid #005290;
 	}
 </style>
+<body>
   <h1>RCB Chat</h1>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
@@ -61,4 +62,5 @@
 		initESW('https://service.force.com');
 	}
 </script>
+</body>
 </HTML>
