--- a/RCB_Chat.html
+++ b/RCB_Chat.html
@@ -1,5 +1,10 @@
-<HTML>
-  <style type='text/css'>
+<!DOCTYPE html>
+<html>
+<head>
+	 
+</head> 
+<body>
+	<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -7,8 +12,7 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #005290;
 	}
-</style>
-<body>
+	</style>
   <h1>RCB Chat</h1>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
@@ -63,4 +67,4 @@
 	}
 </script>
 </body>
-</HTML>
+</html>
