--- a/RCB_Chat.html
+++ b/RCB_Chat.html
@@ -4,7 +4,7 @@
 	 
 </head> 
 <body>
-	<style type='text/css'>
+<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -12,8 +12,8 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #005290;
 	}
-	</style>
-  <h1>RCB Chat</h1>
+</style>
+<h1>YBC LIVE CHAT TESTING PAGE</h1>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
@@ -43,7 +43,7 @@
 			'https://force-connect-2803.my.salesforce-sites.com/',
 			gslbBaseURL,
 			'00DHs000001RRtt',
-			'RCB_Live_Chat2',
+			'YBC_Live_Chat',
 			{
 				baseLiveAgentContentURL: 'https://c.la3-c1-ia6.salesforceliveagent.com/content',
 				deploymentId: '572Hs000000ww8Z',
