--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -1,7 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-	 
+<style type='text/css'>
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #ECC248;
+		font-family: "Georgia", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #ECC248;
+	}
+</style>
+<h1>YCB Plus Live Chat Test Page</h1>
+<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+<script type='text/javascript'>
+	var initESW = function(gslbBaseURL) {
+		embedded_svc.settings.displayHelpButton = true; //Or false
+		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+
+		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+
+		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+
+		// Settings for Chat
+		//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+			// Returns a valid button ID.
+		//};
+		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+
+		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+		embedded_svc.settings.entryFeature = 'LiveAgent';
+
+		embedded_svc.init(
+			'https://force-connect-2803.my.salesforce.com',
+			'https://force-connect-2803.my.salesforce-sites.com/',
+			gslbBaseURL,
+			'00DHs000001RRtt',
+			'YCB_Plus_Live_Chat',
+			{
+				baseLiveAgentContentURL: 'https://c.la3-c1-ia6.salesforceliveagent.com/content',
+				deploymentId: '572Hs000000ww8Z',
+				buttonId: '573Hs000000wykt',
+				baseLiveAgentURL: 'https://d.la3-c1-ia6.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'YCB_Plus_Live_Chat',
+				isOfflineSupportEnabled: true
+			}
+		);
+	};
+
+	if (!window.embedded_svc) {
+		var s = document.createElement('script');
+		s.setAttribute('src', 'https://force-connect-2803.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.onload = function() {
+			initESW(null);
+		};
+		document.body.appendChild(s);
+	} else {
+		initESW('https://service.force.com');
+	}
+</script>	 
 </head> 
 <body>
 </body>
