--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -3,7 +3,7 @@
 <head>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #ECC248;
+		background-color: #4A494A;
 		font-family: "Georgia", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
