--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -9,6 +9,12 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #ECC248;
 	}
+
+	.button .helpButtonEnabled .uiButton
+	{
+		background-color: #4A494A;
+		font-family: "Georgia", sans-serif;
+	}
 </style>
 <h1>YCB Plus Live Chat Test Page</h1>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
