--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -2,19 +2,32 @@
 <html>
 <head>
 <style type='text/css'>
-	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #4A494A;
-		font-family: "Georgia", sans-serif;
-	}
-	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #ECC248;
-	}
-
-	.button .helpButtonEnabled .uiButton
-	{
-		background-color: #4A494A;
-		font-family: "Georgia", sans-serif;
-	}
+              .embeddedServiceHelpButton .helpButton .uiButton {
+                background-color: #FFA400;
+                border-radius: 50%;
+                min-width: 5em;
+               margin: 0 15px 15px 0;
+            }
+              .embeddedServiceHelpButton .helpButton .uiButton:focus {
+                outline: 1px solid #FFA400;
+                border-radius: 50%;
+                min-width: 5em;
+            }
+              .embeddedServiceHelpButton .helpButton {
+                margin: 0 15px 25px 0;
+            }
+              .embeddedServiceHelpButton .helpButton .uiButton .embeddedServiceIcon {
+                margin: auto;
+            }
+              .embeddedServiceHelpButton .embeddedServiceIcon::before {
+               font-size: 2.5em;
+            }
+              .embeddedServiceHelpButton .helpButton .uiButton .helpButtonLabel {
+                display: none;
+            }
+             .embeddedServiceLiveAgentStateChatAvatar.isLightningOutContext .agentIconColor0 {
+                background-color: #84bd00;
+            }
 </style>
 <h1>YCB Plus Live Chat Test Page</h1>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
