--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -15,6 +15,7 @@
             }
               .embeddedServiceHelpButton .helpButton {
                 margin: 0 15px 25px 0;
+	        background-color: #FFA400;
             }
               .embeddedServiceHelpButton .helpButton .uiButton .embeddedServiceIcon {
                 margin: auto;
