--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -5,11 +5,11 @@
 <body>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #ECC248;
+		background-color: #4A494A;
 		font-family: "Georgia", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #ECC248;
+		outline: 1px solid #4A494A;
 	}
 </style>
 <h1>YBC Plus Live Chat Testing</h1>
