--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -5,21 +5,21 @@
 <body>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #4A494A;
+		background-color: #ECC248;
 		font-family: "Georgia", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #4A494A;
+		outline: 1px solid #ECC248;
 	}
 </style>
-<h1>YBC Plus Live Chat Testing</h1>
+<h1>YBC Plus Live Chat Testing Page</h1>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
-		embedded_svc.settings.defaultMinimizedText = "Chat with an Agent"; //(Defaults to Chat with an Expert)
+		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
 		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
@@ -42,7 +42,7 @@
 			'https://force-connect-2803.my.salesforce-sites.com/',
 			gslbBaseURL,
 			'00DHs000001RRtt',
-			'YCB_Plus_Live_Chat',
+			'YBC_Plus_Live_Chat',
 			{
 				baseLiveAgentContentURL: 'https://c.la3-c1-ia6.salesforceliveagent.com/content',
 				deploymentId: '572Hs000000ww8Z',
