--- a/RCB_Chat.html
+++ b/RCB_Chat.html
@@ -6,14 +6,14 @@
 <body>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #005290;
-		font-family: "Arial", sans-serif;
+		background-color: #7ACCC5;
+		font-family: "Verdana", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #005290;
+		outline: 1px solid #7ACCC5;
 	}
 </style>
-<h1>YBC LIVE CHAT TESTING PAGE</h1>
+<h1>YBC Live Chat Testing Page</h1>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
