--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -45,7 +45,7 @@
 			'YBC_Plus_Live_Chat',
 			{
 				baseLiveAgentContentURL: 'https://c.la3-c1-ia6.salesforceliveagent.com/content',
-				deploymentId: '572Hs000000ww8Z',
+				deploymentId: '572Hs000000pDaj',
 				buttonId: '573Hs000000wykt',
 				baseLiveAgentURL: 'https://d.la3-c1-ia6.salesforceliveagent.com/chat',
 				eswLiveAgentDevName: 'YCB_Plus_Live_Chat',
@@ -64,6 +64,6 @@
 	} else {
 		initESW('https://service.force.com');
 	}
-</script>	
+</script>
 </body>
 </html>
