--- a/YBCPlus.html
+++ b/YBCPlus.html
@@ -37,6 +37,9 @@
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
+		embedded_svc.settings.extraPrechatFormDetails = [{"label": "Chat Button", "value": "YBCPlus", 
+								   "displayToAgent": true, "transcriptFields": ["ChatButton__c"]}];
+
 		embedded_svc.init(
 			'https://force-connect-2803.my.salesforce.com',
 			'https://force-connect-2803.my.salesforce-sites.com/',
