--- a/Alchemer.html
+++ b/Alchemer.html
@@ -16,6 +16,7 @@
  var URL = form + "?Last_referring_site=hardcoded";  
 
  iframe.setAttribute('src', URL);
+ console.log("HERE");
  console.log(iframe.src);
  iframe.setAttribute('width', '100%');
  iframe.setAttribute('height', 500);
