--- a/Redirect.html
+++ b/Redirect.html
@@ -4,6 +4,6 @@
 	 
 </head> 
 <body>
-  <a href = "https://richardmagna.github.io/LiveChatTestingPages/Alchemer.html">Redirect Here</a>
+  <a href = "https://richardmagna.github.io/LiveChatTestingPages/Alchemer.html">Redirect Here Now</a>
 </body>
 </html>
