--- a/TradewindsLuggageForm.html
+++ b/TradewindsLuggageForm.html
@@ -2,5 +2,14 @@
     <head></head>
     <body>
         <iframe src="https://page-innovation-8785--developer--c.sandbox.vf.force.com/apex/LuggageReportRedirect" style="width:100%;height:100%;" scrolling="no"></iframe>
+        <script>
+            window.addEventListener('message', (event) => {
+                // Always check the origin here to make sure it's expected
+                if (event.origin === 'https://page-innovation-8785--developer--c.sandbox.vf.force.com' && event.data.action === 'navigate') {
+                    window.location.href = event.data.url;
+                }
+            });
+        </script>
     </body>
+
 </html>
