--- a/TradewindsLuggageForm.html
+++ b/TradewindsLuggageForm.html
@@ -6,7 +6,10 @@
             window.addEventListener('message', (event) => {
                 // Always check the origin here to make sure it's expected
                 if (event.origin === 'https://page-innovation-8785--developer--c.sandbox.vf.force.com' && event.data.action === 'navigate') {
-                    window.location.href = event.data.url;
+                    if (window.location.href === 'https://page-innovation-8785--developer--c.sandbox.vf.force.com/apex/LuggageReportRedirect') {
+                        window.location.href = event.data.url;
+                    }
+
                 }
             });
         </script>
