--- a/TradewindsLuggageForm.html
+++ b/TradewindsLuggageForm.html
@@ -7,7 +7,7 @@
                 // Always check the origin here to make sure it's expected
                 if (event.origin === 'https://page-innovation-8785--developer--c.sandbox.vf.force.com' && event.data.action === 'navigate') {
                     if (window.location.href === 'https://page-innovation-8785--developer--c.sandbox.vf.force.com/apex/LuggageReportRedirect') {
-                        //window.location.href = event.data.url;
+                        window.location.href = event.data.url;
                     }
 
                 }
