--- a/TradewindsProdLuggageForm.html
+++ b/TradewindsProdLuggageForm.html
@@ -5,6 +5,7 @@
         <script>
             window.addEventListener('message', (event) => {
                 // Always check the origin here to make sure it's expected
+                console.log('here2');
                 if (event.origin === 'https://page-innovation-8785.lightning.force.com' && event.data.action === 'navigate') {
                     console.log("here1");
                     window.location.href = event.data.url;
