--- a/TradewindsProdLuggageForm.html
+++ b/TradewindsProdLuggageForm.html
@@ -6,6 +6,7 @@
             window.addEventListener('message', (event) => {
                 // Always check the origin here to make sure it's expected
                 console.log('here2');
+                console.log(event.origin);
                 if (event.origin === 'https://page-innovation-8785.lightning.force.com' && event.data.action === 'navigate') {
                     console.log("here1");
                     window.location.href = event.data.url;
