--- a/TradewindsProdLuggageForm.html
+++ b/TradewindsProdLuggageForm.html
@@ -8,7 +8,7 @@
                 console.log('here2');
                 console.log(event.origin);
                 console.log(event.data.action);
-                if (event.origin === 'https://page-innovation-8785.lightning.force.com' && event.data.action === 'navigate') {
+                if (event.origin === 'https://page-innovation-8785--c.vf.force.com' && event.data.action === 'navigate') {
                     console.log("here1");
                     window.location.href = event.data.url;
 
